# dendrophis

./: .gitignore  .pre-commit-config-py-style.yaml  CACHING_STRATEGY.md  CLAUDE.md  LICENSE  README.md  benchmark_interpreters.py  check_panels.py  cloudflare.yaml  coding_agent_prompt.md  complex_demo.sh  convert_to_mlc.sh  dendrophis.sh  dendrophis.yaml.openrouter  enhancement_request.md  gemma4.md  insert_first_memory.py  jit-dend.sh  lmstudio.yaml  micro_bench.py  mlc.yaml  mlx.yaml  original_prompt.md  problem_report.md  project_summary.md  pyproject.toml  pypy-dend.sh  refactor_chat_orchestrator_plan.md  start_mlc_server.sh  start_mlx_server.sh  system.md  verify_heuristic.py  verify_memory.py
.antigravitycli/: ce254463-e60f-44aa-b7e0-664477608442.json
benchmarks/: benchmark_omlx_mtp.py
configs/: cloudflare.yaml  codestral.yaml  gemma.yaml  llama.yaml
dendrophis/: __init__.py  __main__.py  cli.py  codestral.yaml  debug_chat.py  utils.py
examples/: event_bus_demo.py  simple_demo.py
local-ai-mlc/: update_mlc_config.py
local-ai-mlx/: README.md  rapid_chat.py  update_mlx_config.py
routerdash/: .classification_cache.json  analyze.py  main.py
scratch/: benchmark_mtp.py  benchmark_suite.py  check_messages.py  debug_e2e_response.py  find_variation_selectors.py  inspect_session.py  read_session_log.py
scripts/: capture_screenshots.py  parse_chat_log.py
story_john_smith/: chapter_1.md  story_elements_summary.md
tests/: test_caching_phase1.py  test_deepinfra_sanitization.py  test_event_bus.py  test_input_bar_key_handling.py  test_memory.py  (+3 more)
(+165 files in other folders)
