[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dendrophis"
version = "0.6.1"
description = "Python-native terminal coding agent"
license = { text = "MPL-2.0" }
authors = [{ name = "Derek S Wilson" }]
requires-python = ">=3.11"
keywords = ["agent", "cli", "llm", "terminal", "coding-assistant", "tui"]
dependencies = [
    "textual>=7.0",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "pydantic>=2.7",
    "ruamel.yaml>=0.18",
    "tiktoken>=0.7",
    "psutil>=5.9",
    "numpy>=1.26",
    "mcp>=1.27.2",
]

[project.urls]
Source = "https://github.com/sp1d3rx/dendrophis"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "respx",
]

[project.scripts]
dendrophis = "dendrophis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["dendrophis"]
include = ["dendrophis/skills/*.md"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "SIM", "C4", "B", "PT", "RET", "PERF", "RUF"]

[tool.ruff.lint.per-file-ignores]
"dendrophis/config/defaults.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::pytest.PytestConfigWarning",
]
